# cpp-by-example

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  book.toml  build.sh
.github/workflows/: cmake-single-platform.yml  mdbook.yml
_oop/destructor/: virtual-destructor.cpp
_oop/non_copyable/: CMakeLists.txt  func-in-derived-2.cpp
_std/regex/: regex.cpp
_std/string_view/: string-view-copy-3.cpp  string-view-copy.cpp  ub-heap-allocation.cpp
_std/thread/: CMakeLists.txt  condition-variable-and-future.cpp  condition-variable.cpp
_std/weird_map/: weird-map-3.cpp
_templates/: CMakeLists.txt  good-enum.cpp
_templates/enable_if/: enable-if-2.cpp  enable-if-4.cpp
audio/: CMakeLists.txt  ogg_duration.cpp
basics/: CMakeLists.txt
basics/constness/: CMakeLists.txt  const-1.cpp  const-2.cpp  const-3.cpp  const-4.cpp  lifetime.cpp
basics/fork/: CMakeLists.txt  fork.cpp
basics/global/: CMakeLists.txt  main.cpp  other_place.cpp  somewhere.cpp  somewhere.h
basics/pointing_arguments/: by-reference.cpp  c-style.cpp  pointing.cpp
basics/raw_pointers/: raw-pointer-container-2.cpp  raw-pointer-container-3.cpp  raw-pointer-container.cpp
basics/weird_map/: weird-map-2.cpp
big_files/: CMakeLists.txt  diff_two_archives.cpp  extract_gzip_archive.cpp
cli/: CMakeLists.txt  test_protocol_ui.cpp
combinations/: CMakeLists.txt  batteries.hpp  lucky-numbers.cpp
combinatorics/: CMakeLists.txt  numbers-match.cpp  permutations.cpp
compiler/: CMakeLists.txt  code-to-assembly.cpp
const/: CMakeLists.txt
crosswords/: CMakeLists.txt  wordtable.cpp
crypto/: CMakeLists.txt  rsa-keys.cpp  sha-test.cpp  test-rsa
cryptography/: CMakeLists.txt  rsa2048.cpp  sha-test.cpp  sha256-test.cpp  test-rsa.pub
cuda/: conv2d.cpp
destructor/: CMakeLists.txt  virtual-destructor.cpp
enable_if/: CMakeLists.txt  enable-if-1.cpp  enable-if-3.cpp
experimental/: CMakeLists.txt  bfd-example.cpp
fork/: CMakeLists.txt  long_process.sh
fsm/: MachineStates.cpp  main.cpp
gpu/: CMakeLists.txt
gpu/cuda/: CMakeLists.txt
gpu/opencv/: CMakeLists.txt
gpu/rocm/: CMakeLists.txt  (+1 more)
graphics/: .gitignore  CMakeLists.txt
graphics/bgfx_ext/: bgfx_utils.cpp  example-glue.cpp
graphics/bgfx_ext/debugdraw/: debugdraw.cpp
graphics/bgfx_ext/imgui/: bgfx_imgui.cpp  bgfx_imgui.h
graphics/html/: app.cpp  app.h  html_element.h  html_parser.cpp  html_parser.h  html_renderer.cpp  html_renderer.h  main.cpp  parser_test.cpp
graphics/imgui_ext/: imgui_widgets_slider.cpp
graphics/neurons/: CMakeLists.txt  brain.cpp  camera.cpp  data_processor.h  data_processor.hpp  empty_bgfx.cpp  mnist_data_processor.cpp  mnist_data_processor.h  mouse.cpp  network.cpp  network.h  network.hpp  neuron.capnp  neuron.capnp.c++  neuron.capnp.h  neuron.hpp  neurons_cli.cpp  neurons_gui.cpp  render_strategy.h  renderer.cpp  renderer.hpp  settings.cpp  simulation_clock.hpp  synapse.cpp  synapse.h  synapse.hpp
graphics/neurons/render/: ground.hpp  network_render.cpp  network_render.h  network_render.hpp  neuron_render.cpp  neuron_render.hpp  pos_color_vertex.h  t_phi_vertex.h
graphics/neurons/shaders/: fs_instancing.sc  varying_bezier_tube.def.sc  varying_selection.def.sc  varying_tube_test.def.sc  vs_bezier_tube.sc  vs_cubes.sc  vs_instancing.sc  vs_single_tube.sc  vs_tube_test.sc
graphics/nodes/: CMakeLists.txt  hello.cpp  nodes_example.cpp
jewel_game/: CMakeLists.txt  HackerRankContest.cpp  HackerRankContest.h
led/: Artnet.h  CMakeLists.txt  crgb.h  ipaddress.h  led-proxy-next.cpp  light-squares.cpp  show-viz.cpp
led/app/: led-o-player.cpp  led-player.cpp  led-proxy-serial.cpp  led-proxy.cpp  led-serial.cpp
led/controller/fastled_test_rainbow/: fastled_test_rainbow.ino
led/controller/protocol_test/: protocol_test.ino
led/examples/: artnet-from-cache.cpp  artnet-parser.cpp  fastled-test.cpp  pcap-reader.cpp  quixant-to-ws2812.cpp  uart-sender.cpp  udp-sender.cpp
led/sender/: network_error.cpp  uart_error.cpp  uart_sender.cpp  uart_sender.h  udp_sender.cpp  udp_sender.h
led/show/: config.hpp  show.cpp  show.h  show_abstract.cpp  show_abstract.h  show_abstract.hpp  show_cached.hpp  show_led.hpp  show_simple.hpp  show_test.hpp  show_uart_cached.hpp  show_udp_cached.cpp  show_udp_cached.hpp
led/stream/: pcap_stream.hpp  sequential_stream.hpp  single_color_stream.hpp  test_stream.hpp
led/tools/: clean-recording.cpp
llvm/: CMakeLists.txt  code-to-assembly.cpp  compile-to-asm.cpp
lua/: CMakeLists.txt  stack.cpp
net/: CMakeLists.txt  queue.hpp  send-udp-simple.cpp  send-udp.cpp  websocket.cpp
non_copyable/: CMakeLists.txt  func-in-derived-class.cpp  non-copyable.cpp
oop/: CMakeLists.txt
opencv/: CMakeLists.txt  crop_image.cpp
optimization/: CMakeLists.txt
opts/: CMakeLists.txt  cryptor.cpp
patterns/: CMakeLists.txt
pointing_arguments/: CMakeLists.txt  cleaning.cpp  cpp-style.cpp
puzzles/: CMakeLists.txt  shifts.py
rabbit/: CMakeLists.txt  bias-finder.cpp  bias-picture.cpp  chi_square_std_dev_test.cpp  holding.cpp  isaac.cpp  numbers-to-stream.cpp  rand-picture.cpp  scale.cpp
rand/: CMakeLists.txt  randomness-test.c
raw_pointer_container/: CMakeLists.txt
regex/: CMakeLists.txt
scripting/: CMakeLists.txt
scripting/python/: CMakeLists.txt  embed_test.cpp  neuron.py
serialization/: CMakeLists.txt  a.out  lrand.c  mnist_encode.cpp  save-number.cpp  write-number.cpp
serialization/json/: CMakeLists.txt  example.json  json.cpp
serialization/yaml/: CMakeLists.txt  yaml.cpp
src/: README.md  SUMMARY.md  toc.md
std/: CMakeLists.txt
std/string_view/: CMakeLists.txt  string-view-copy-2.cpp  ub-stack-allocation.cpp
stdstring/: CMakeLists.txt
templates/: CMakeLists.txt  why.cpp
thread/: CMakeLists.txt  lambda-in-thread.cpp  static-threads-1.cpp
time/: 2070-rtc-limit.c  CMakeLists.txt  scheduler.cpp
variadic/: CMakeLists.txt  max.cpp  variadic-vararg.cpp
virtual_call/: CMakeLists.txt  mutable-derived.cpp  virtual-call-gap.cpp  virtual-call.cpp
weird_map/: CMakeLists.txt  weird-map.cpp
yaml/: CMakeLists.txt  config.yaml
(+69 files in other folders)
